--- a/movieSelector.html
+++ b/movieSelector.html
@@ -2,7 +2,7 @@
 <html lang="english">
     <head>
         <title>Movie Selector</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="movieSelectorStyle.css">
         <script src="movieSelector.js"></script>
     </head>
     <body>
